--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
-    "name": "mp-ecommerce-php",
+    "name": "cristian/mp-ecommerce-php",
     "type": "project",
-    "require": {}
+    "require": {
+        "mercadopago/dx-php": "^2.2"
+    }
 }
